--- a/ChatBot/MainWindow.xaml
+++ b/ChatBot/MainWindow.xaml
@@ -2,20 +2,268 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatBot"
-        mc:Ignorable="d"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="ChatBot"
+        Width="400"
+        Height="600"
+        MinWidth="200"
+        MinHeight="300"
         Icon="Imagenes/robot.ico"
-        Title="ChatBot" Height="500" Width="400">
-    <DockPanel>
+        mc:Ignorable="d">
+    <Window.CommandBindings>
+        <CommandBinding CanExecute="CommandBinding_CanExecuted_Conexion"
+                        Command="local:CustomCommands.Conexion"
+                        Executed="CommandBinding_Executed_Conexion" />
+        <CommandBinding CanExecute="CommandBinding_CanExecuted_Salir"
+                        Command="local:CustomCommands.Salir"
+                        Executed="CommandBinding_Executed_Salir" />
+        <CommandBinding CanExecute="CommandBinding_CanExecuted_NuevaYGuardar"
+                        Command="local:CustomCommands.Nueva"
+                        Executed="CommandBinding_Executed_Nueva" />
+        <CommandBinding CanExecute="CommandBinding_CanExecuted_NuevaYGuardar"
+                        Command="local:CustomCommands.Guardar"
+                        Executed="CommandBinding_Executed_Guardar" />
+        <CommandBinding CanExecute="CommandBinding_CanExecute_Configuracion"
+                        Command="local:CustomCommands.Configuracion" />
+    </Window.CommandBindings>
+    <Window.Resources>
+        <!--  Imagenes ToolBar  -->
+        <Style x:Key="imagenToolBar"
+               TargetType="Image">
+            <Setter Property="Height"
+                    Value="25" />
+            <Setter Property="Width"
+                    Value="35" />
+            <Setter Property="Margin"
+                    Value="0,4,0,4" />
+        </Style>
+        <!--  Imagen Origen Mensaje  -->
+        <Style x:Key="imagenOrigen"
+               TargetType="Image">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=Origen}"
+                             Value="U">
+                    <Setter Property="Source"
+                            Value="Imagenes/hombre.png" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Origen}"
+                             Value="B">
+                    <Setter Property="Source"
+                            Value="Imagenes/robot.png" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <!-- Texto origen mensaje TextBlock -->
+        <Style x:Key="textoOrigen"
+               TargetType="TextBlock">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=Origen}"
+                             Value="U">
+                    <Setter Property="Text"
+                            Value="Usuario" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Origen}"
+                             Value="B">
+                    <Setter Property="Text"
+                            Value="Robot" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <!-- Background, alineación y ancho del mensaje -->
+        <Style TargetType="Border"
+               x:Key="borderMensaje">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=Origen}"
+                             Value="U">
+                    <Setter Property="Background"
+                            Value="#90EE90" />
+                    <Setter Property="HorizontalAlignment"
+                            Value="Left" />
+                    <Setter Property="MaxWidth"
+                            Value="310" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Origen}"
+                             Value="B">
+                    <Setter Property="Background"
+                            Value="#7FFFD4" />
+                    <Setter Property="HorizontalAlignment"
+                            Value="Right" />
+                    <Setter Property="MaxWidth"
+                            Value="300" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <!--  Plantilla TextBox: poner borde negro y grosor 2 -->
+        <ControlTemplate x:Key="TextBoxControlTemplate1"
+                         TargetType="{x:Type TextBox}">
+            <Border x:Name="border"
+                    Background="{TemplateBinding Background}"
+                    BorderBrush="Black"
+                    BorderThickness="2"
+                    SnapsToDevicePixels="True">
+                <ScrollViewer x:Name="PART_ContentHost"
+                              Focusable="False"
+                              HorizontalScrollBarVisibility="Hidden"
+                              VerticalScrollBarVisibility="Hidden" />
+            </Border>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsEnabled"
+                         Value="False">
+                    <Setter TargetName="border"
+                            Property="Opacity"
+                            Value="0.56" />
+                </Trigger>
+                <Trigger Property="IsMouseOver"
+                         Value="True">
+                    <Setter TargetName="border"
+                            Property="BorderBrush"
+                            Value="#FF7EB4EA" />
+                </Trigger>
+                <Trigger Property="IsKeyboardFocused"
+                         Value="True">
+                    <Setter TargetName="border"
+                            Property="BorderBrush"
+                            Value="#FF569DE5" />
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+        <!--  Plantilla ItemsControl  -->
+        <DataTemplate DataType="{x:Type local:Mensaje}">
+            <Border x:Name="lineaItemsControl"
+                    Margin="10,10,10,0"
+                    Style="{StaticResource borderMensaje}"
+                    BorderBrush="Black"
+                    CornerRadius="5"
+                    BorderThickness="2">
+                <DockPanel LastChildFill="false">
+                    <StackPanel DockPanel.Dock="Top"
+                                Orientation="Horizontal">
+                        <Image Width="25"
+                               Height="25"
+                               Margin="5,5,5,0"
+                               Style="{StaticResource imagenOrigen}" />
+                        <TextBlock Style="{StaticResource textoOrigen}"
+                                   Margin="0,5,5,0"
+                                   FontWeight="Bold"
+                                   FontSize="15" />
+                    </StackPanel>
+                    <TextBlock DockPanel.Dock="Bottom"
+                               x:Name="mensajeTextBlock"
+                               Text="{Binding Path=Texto}"
+                               FontSize="14"
+                               Margin="5,3"
+                               TextWrapping="Wrap"/>
+                </DockPanel>
+            </Border>
+        </DataTemplate>
+    </Window.Resources>
+    <DockPanel x:Name="dockpanelGeneral">
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Archivo">
-                
+                <MenuItem Command="local:CustomCommands.Nueva"
+                          Header="Nueva conversación"
+                          InputGestureText="Ctrl+N">
+                    <MenuItem.Icon>
+                        <Image Source="Imagenes/new.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Command="local:CustomCommands.Guardar"
+                          Header="Guardar conversación..."
+                          InputGestureText="Ctrl+G">
+                    <MenuItem.Icon>
+                        <Image Source="Imagenes/save.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Command="local:CustomCommands.Salir"
+                          Header="Salir"
+                          InputGestureText="Ctrl+S">
+                    <MenuItem.Icon>
+                        <Image Source="Imagenes/exit.ico" />
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="Herramientas">
-                
+                <MenuItem Command="local:CustomCommands.Configuracion"
+                          Header="Configuración"
+                          InputGestureText="Ctrl+C">
+                    <MenuItem.Icon>
+                        <Image Source="Imagenes/config.ico" />
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Command="local:CustomCommands.Conexion"
+                          Header="Comprobar conexión"
+                          InputGestureText="Ctrl+O">
+                    <MenuItem.Icon>
+                        <Image Source="Imagenes/check.png" />
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
         </Menu>
-        
+        <ToolBarTray Height="40"
+                     DockPanel.Dock="Top">
+            <ToolBar>
+                <Button Command="local:CustomCommands.Nueva">
+                    <Image Source="Imagenes/new.png"
+                           Style="{StaticResource imagenToolBar}"
+                           ToolTip="Nueva conversación" />
+                </Button>
+                <Button Command="local:CustomCommands.Guardar">
+                    <Image Source="Imagenes/save.png"
+                           Style="{StaticResource imagenToolBar}"
+                           ToolTip="Guardar conversación" />
+                </Button>
+                <Separator />
+                <Button Command="local:CustomCommands.Configuracion">
+                    <Image Source="Imagenes/config.ico"
+                           Style="{StaticResource imagenToolBar}" 
+                           ToolTip="Configuración"/>
+                </Button>
+                <Button Command="local:CustomCommands.Conexion">
+                    <Image Source="Imagenes/check.png"
+                           Style="{StaticResource imagenToolBar}"
+                           ToolTip="Comprobar conexión" />
+                </Button>
+                <Separator />
+                <Button Command="local:CustomCommands.Salir">
+                    <Image Source="Imagenes/exit.ico"
+                           Style="{StaticResource imagenToolBar}"
+                           ToolTip="Salir" />
+                </Button>
+            </ToolBar>
+        </ToolBarTray>
+        <Grid Height="33"
+              DockPanel.Dock="Bottom">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="33" />
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="mensajeTextBox"
+                     Grid.Column="0"
+                     Padding="1,5,0,0"
+                     FontSize="14"
+                     Template="{DynamicResource TextBoxControlTemplate1}" />
+            <Button x:Name="EnviarButton"
+                    Grid.Column="1"
+                    IsDefault="True"
+                    Click="EnviarButton_Click">
+                <Image Width="33"
+                       Source="Imagenes/send.png" />
+            </Button>
+        </Grid>
+        <ScrollViewer VerticalScrollBarVisibility="Auto"
+                      HorizontalScrollBarVisibility="Disabled">
+            <ItemsControl x:Name="listaItemsControl"
+                          Background="#FFFFE0"
+                          ItemsSource="{Binding}"
+                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                          ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel />
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+        </ScrollViewer>
     </DockPanel>
 </Window>
