Quito un scroll que se me había quedado de pruebas en el ItemsControl

--- a/ChatBot/MainWindow.xaml
+++ b/ChatBot/MainWindow.xaml
@@ -258,9 +258,7 @@
                       HorizontalScrollBarVisibility="Disabled">
             <ItemsControl x:Name="listaItemsControl"
                           Background="#FFFFE0"
-                          ItemsSource="{Binding}"
-                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                          ScrollViewer.VerticalScrollBarVisibility="Auto">
+                          ItemsSource="{Binding}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel />
